--- a/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
+++ b/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
@@ -7,16 +7,16 @@
     <form [formGroup]="withdrawForm">
       <div nz-row [nzGutter]="[16, 16]">
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <ng-template #tooltipRecurringWithdrawal>
-            - Thủ công: Trưởng phòng sale chủ động chia data cho nhân viên sale của tổ chức<br />
-            - Tự động: Hệ thống sẽ tự chia đều data cho các nhân viên sale của tổ chức theo logic xoay vòng (1234512345...).
-          </ng-template>
           <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'recurring_withdrawal_period' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipRecurringWithdrawal" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+            <!-- <ng-template #tooltipRecurringWithdrawal>
+              - {{'weekly' | translate }}: {{'guide_withdraw_recurring_weekly' | translate }}
+              - {{'monthly' | translate }}: {{'guide_withdraw_recurring_monthly' | translate }}
+            </ng-template>
+            <span [nzTooltipTitle]="tooltipRecurringWithdrawal" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span> -->
           </div>
 
           <nz-select formControlName="withdrawMoneyType" style="display: block">
@@ -26,16 +26,12 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8" *ngIf="withdrawForm.get('withdrawMoneyType')?.value === 1">
-          <ng-template #tooltipPickADay>
-            - Nếu bạn chọn rút tiền theo tháng, bạn sẽ điền vào ngày nào bạn muốn thành viên thực hiện lệnh rút tiền. <br />
-            - Nếu bạn chọn rút tiền theo tuần, bạn sẽ chọn thứ nào bạn muốn thành viên thực hiện lệnh rút tiền.
-          </ng-template>
           <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
               {{'pick_a_day_in_a_week' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipPickADay" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_withdraw_weekly' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <nz-select formControlName="dayOfWeek" style="display: block">
@@ -50,9 +46,13 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8" *ngIf="withdrawForm.get('withdrawMoneyType')?.value === 2">
-          <span class="text-label">
-            {{'pick_a_day_in_a_month' | translate }}
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{'pick_a_day_in_a_month' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_withdraw_monthly' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <nz-input-number formControlName="dayOfMonth" [nzMin]="1" [nzMax]="31" [nzStep]="1"></nz-input-number>
         </div>
@@ -80,8 +80,9 @@
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
           <ng-template #tooltipAdvanceLimit>
-            Chỉ áp dụng với hình thức rút tiền theo tháng <br />
-            Điền vào đây số % tổng số tiền có trong tài khoản của thành viên mà bạn cho phép rút sớm. Lưu ý: số % phải lớn hơn 0.
+            {{'guide_withdrawal_advanced_limit' | translate }}
+            <br />
+            <strong>{{'caution' | translate}}</strong>: số % phải lớn hơn 0.
           </ng-template>
           <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
@@ -99,8 +100,8 @@
 
         <div nz-col [nzXs]="24" [nzSm]="16" [nzMd]="16">
           <ng-template #tooltipDescription>
-            Đây là phần ghi chủ mà bạn muốn thông báo cho thành viên. Nội dung này sẽ hiển thị ở phần
-            <strong>Số dư tài khoản</strong>
+            {{'guide_withdraw_config_description' | translate }}
+            <strong>{{'account_balance' | translate}}</strong>
           </ng-template>
           <div class="d-flex justify-content-between align-items-center">
             <span class="text-label">
