--- a/src/app/pages/forum/components/sub-forum/sub-forum-detail/sub-forum-detail.component.scss
+++ b/src/app/pages/forum/components/sub-forum/sub-forum-detail/sub-forum-detail.component.scss
@@ -55,3 +55,13 @@ nz-select{
 .width-100{
   width: 100%;
 }
+
+.pd-t-10{
+  padding-top: 10px;
+}
+.allow-free{
+  padding-top: 10px;
+  span{
+    margin-right: 8px;
+  }
+}
